# advent-of-code-2023

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: ci.yaml
advent_of_code_2023/: __init__.py
advent_of_code_2023/data_structures/: __init__.py  interval.py  trie.py  trie_map.py
advent_of_code_2023/day01/: __init__.py  part2.py
advent_of_code_2023/day02/: part1.py  test__part1.py  test__part2.py
advent_of_code_2023/day03/: __init__.py  part2.py  test__part1.py
advent_of_code_2023/day04/: __init__.py  part1.py  test__part1.py  test__part2.py
advent_of_code_2023/day06/: part1.py  test__part1.py  test__part2.py
advent_of_code_2023/day07/: part1.py  part2.py  test__part2.py
advent_of_code_2023/day08/: __init__.py  part1.py  test__part2.py
advent_of_code_2023/day09/: test__part1.py  test__part2.py
advent_of_code_2023/day1/: part1.py  part2.py  test__part1.py  test__part2.py
advent_of_code_2023/day10/: __init__.py  part1.py  part2.py  test__part1.py  test__part2.py
advent_of_code_2023/day11/: __init__.py  part1.py  part2.py  test__part1.py  test__part2.py
advent_of_code_2023/day12/: part1.py  part2.py  test__part1.py  test__part2.py
advent_of_code_2023/day13/: __init__.py  part1.py  part2.py  test__part1.py  test__part2.py
advent_of_code_2023/day14/: __init__.py  part1.py  part2.py  test__part1.py  test__part2.py
examples/: __init__.py  test__example.py
template/: __init__.py  part1.py  part2.py  test__part1.py  test__part2.py
(+47 files in other folders)
